--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tabuada</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>Tabuada</h1>
   </header>
-
   <main>
     <form>
       <span type="number" id="number1"></span>
-      <span>x</span>
+      <span id="times">x</span>
       <span type="number" id="number2"></span>
+      <span>=</span>
       <input type="number" name="userResult">
       <button type="submit">OK</button>
     </form>
-    <button type="button" onclick="createMultiplication()">Reaload</button>
+    <button type="button" onclick="createMultiplication()">Next</button>
     <section>
       <h2 id="answer"></h2>
       <h3 id="result"></h3>
     </section>
   </main>
-
   <script src="app.js"></script>
 </body>
 </html>
