--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button type="submit">OK</button>
     </form>
     <button type="button" onclick="createMultiplication()">Next</button>
-    <section>
+    <section class="hidden">
       <h2 id="answer"></h2>
       <h3 id="result"></h3>
     </section>
