[update] change app font size

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   </header>
   <main>
     <form>
-      <span type="number" id="number1"></span>
-      <span id="times">x</span>
-      <span type="number" id="number2"></span>
-      <span>=</span>
-      <input type="number" name="userResult">
+      <div>
+        <span type="number" id="number1"></span>
+        <span id="times">x</span>
+        <span type="number" id="number2"></span>
+        <span>=</span>
+        <input type="number" name="userResult">
+      </div>
       <button type="submit">OK</button>
     </form>
     <button type="button" onclick="createMultiplication()">Next</button>
